# DeltaCrown

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  01_system_understanding.md  02_existing_systems_audit.md  03a_bounty_system_design.md  03b_endorsements_and_showcase_design.md  03c_loadout_and_live_status_design.md  03d_pinned_clip_and_highlights_design.md  04a_bounty_risk_review.md  04b_endorsements_showcase_risk_review.md  04c_loadout_live_stream_risk_review.md  04d_highlights_embed_risk_review.md  05a_master_remediation_plan.md  05b_profile_backend_contract.md  05c_frontend_rebuild_plan.md  05d_execution_plan.md  05d_p0_checklist.md  05d_p0_impl_log_1.md  05d_p0_impl_log_2.md  05d_p0_phase_1e_visibility_fix.md  06a_backup_profile_ui_log.md  06b1_media_embed_backend_log.md  06b2_loadout_backend_log.md  06b2_p0_progress_update.md  06b3_showcase_backend_log.md  06b4_endorsements_backend_log.md  06b5_bounty_backend_log.md  06c_profile_context_backend_log.md  ABOUT_PAGE_ANALYSIS.md  ACTION_PLAN.md  ADMIN_FIXES_COMPLETE.md  ADMIN_KEYERROR_FIX_SUMMARY.md  ALL_FIXES_COMPLETE.txt  API_REFERENCE_GAME_CONFIG.md  (+526 more)
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  MODULE_3.1_PR.md  REPOSITORY_SETUP.md  dependabot.yml  pull_request_template.md
Documents/: CANARY_5_PERCENT_CONFIG.md  CANARY_ENABLEMENT_GO.md  CREATE_TEAM_PHASE_B_HARDENING.md  CREATE_TEAM_PHASE_C_NOTES.md  DB_RESET_NOTES.md  FINAL_COMPLETION_AUDIT.md  FRONTEND_INTEGRATION.md  Organization_Modern_Identifiers_Implementation.md  PHASE_5_PR_DESCRIPTION.md  PRODUCTION_CANARY_RUNBOOK.md  Phase5_6_Hardening_Spec.md  Phase5_9Game_Blueprint_Verification.md  Phase5_Closeout_Package.md  Phase5_Configuration_Rollback.md  Phase5_PII_Discipline.md  Phase5_Staging_Enablement.md  Phase5_Webhook_Evidence.md  TOURNAMENT_LIFECYCLE_BUILD_PLAN.md  UP_PHASE13_PROFILE_UI_REBUILD.md  staging_matches_output.json  staging_payments_output.json
NextTask/: registation form making
backup/: team-create-enhanced-old.css  team-create_old_20251012_124929.js  team_create.html  team_create_html_old_20251013_132208.html  team_create_modern_old_20251013_132158.css
backup_legacy/: MIGRATION_PLAN.md
backup_old_team_code/: BACKUP_MANIFEST.md
backups/: dashboard_v9_cc_index.html  public.py.backup  teams-list-two-column.css.backup  urls.py.backup
common/: __init__.py
config/: flags.md
deltacrown/: admin_callbacks.py  admin_widgets.py  asgi.py  celery.py  exception_handlers.py  health.py  lifecycle_cron.py  metrics.py  routing.py  settings.py  settings_smoke.py  settings_sqlite_test.py  settings_test.py  settings_test_pg.py  sitemaps.py  storage.py  test_runner.py  urls.py  views.py  wsgi.py
docs/: ADMIN_FIXES.md  ADMIN_FIX_ARCHIVED_KEYERROR.md  ADMIN_ORGANIZATION.md  ADMIN_REORGANIZATION_COMPLETE.md  ADMIN_REORGANIZATION_PLAN.md  ADMIN_REORGANIZATION_PROGRESS.md  ALL_BUGS_FIXED_DEPLOYMENT_READY.md  ARCHITECTURE_AND_DEPLOYMENT.md  AUTOMATED_TOURNAMENTS_ROADMAP.md  BANGLADESH_CROWNSTORE_SUCCESS.md  C1_CLEANUP_EXECUTION_REPORT_2026-01-14.md  CENTRALIZED_GAME_ASSETS_MIGRATION_COMPLETE.md  CLONE_AND_ARCHIVE_FEATURES.md  COMPETITIVE_SYSTEM_DESIGN.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_FOLLOW_SYSTEM_REMOVAL_2026-01-22.md  CRITICAL_BUG_FIX_COMPLETE.md  CRITICAL_FIXES_2026-01-22.md  CROWNSTORE_COMPLETE_DOCUMENTATION.md  CROWNSTORE_COMPLETE_GUIDE.md  CROWNSTORE_INTEGRATION_SUCCESS.md  CROWNSTORE_PRODUCT_MANAGEMENT_GUIDE.md  CSS_JS_Fix_Summary.md  Community_Professional_Improvements.md  Community_Redesign_Summary.md  DASHBOARD_DESIGN.md  DATA_MIGRATION_COMPLETE.md  DAY_SUMMARY_OCT_3_2025.md  DB_POLICY.md  DECISION_GUIDE.md  DELTACROWN_DEV_TRACKER.md  DEPLOYMENT_STATUS_FINAL.md  DESIGN_IMPROVEMENT_REPORT.md  DESIGN_SYSTEM.md  DOCUMENTATION_INDEX.md  DYNAMIC_BUTTONS_QUICK_REF.md  DYNAMIC_REGISTRATION_FORMS.md  DeltaCrown_Plan_Parts_A-H.md  DeltaCrown_User_Stories_A-H.md  EMAIL_VERIFICATION_SYSTEM.md  (+187 more)
frontend_sdk/: README.md  package-lock.json  package.json  tsconfig.json
grafana/: moderation_enforcement_dashboard.json  slo_burn_alerts.json  webhooks_canary_alerts.json  webhooks_canary_observability.json
logs/: team_create_test_output.html  test_results.txt  validation_report.json
migrations_new/: add_is_passport_supported.py
nginx/: nginx.conf
ops/: README.md  docker-compose.test.yml
reports/: OOM_ANALYSIS_512MB.md  canary_T+2h.md  canary_T+30m.md
scripts/: adapt_bangladesh_market.py  analyze_capacity_migration.py  analyze_finance_migration.py  analyze_run.py  apply_gp2a_fix.ps1  audit_instrumentation_patterns.py  audit_migration_integrity.py  backfill_certificates_to_s3.py  backup_db.sh  c1_verification_test.py  canary_smoke_tests.py  certificate_consistency.py  check_control_plane_parity.py  check_detail.py  check_gameprofile_columns.py  check_gp2a_columns.bat  check_hub.py  check_js_braces.py  check_schema_location.py  check_tables.py  check_tests.py  check_tournament_1.py  check_tournament_data.py  clean_tournament_data.py  collect_diagnostics.py  collect_evidence.sh  complete_modularization.py  convert_admin_unfold.py  create_test_roles.py  demo_tournament_schedule.py  detailed_smoke_test.py  drop_tables.sql  drop_tournament_tables.py  extract_javascript.py  final_registration_verification.py  final_verification.py  find_left_at.py  fix_slugs.py  fix_test_fields.py  gate_console_logs.py  (+65 more)
synthetics/: uptime_checks.yml
templates/: 403.html  403_csrf.html  404.html  500.html  Arena.html  about.html  base.html  base.html.backup  base_no_footer.html  community.html  favicon_test.html  home.html  home_v3.html  (+9 more)
(+5133 files in other folders)
